Fixed spacing with the BTT button on Elk

--- a/elkBurgers.css
+++ b/elkBurgers.css
@@ -67,7 +67,7 @@ h2 {
     border: 3px solid rgb(30, 232, 15);
     border-radius: 1.5%;
     width: 51.2em;
-    height: 6em;
+    height: 5em;
     padding-top: 0.3em;
     font-size: 20px;
     text-align: center;
